--- a/IPSX/Storyboard/Landing.storyboard
+++ b/IPSX/Storyboard/Landing.storyboard
@@ -48,7 +48,8 @@ Accepted currency: ether</string>
                                         <color key="tintColor" name="DarkBlue"/>
                                         <state key="normal" title="Button"/>
                                         <userDefinedRuntimeAttributes>
-                                            <userDefinedRuntimeAttribute type="boolean" keyPath="bordered" value="YES"/>
+                                            <userDefinedRuntimeAttribute type="boolean" keyPath="border" value="YES"/>
+                                            <userDefinedRuntimeAttribute type="boolean" keyPath="shadow" value="NO"/>
                                             <userDefinedRuntimeAttribute type="color" keyPath="borderColor">
                                                 <color key="value" name="DarkBlue"/>
                                             </userDefinedRuntimeAttribute>
@@ -74,6 +75,10 @@ Accepted currency: ether</string>
                                         <state key="normal" title="Sign Up with Email">
                                             <color key="titleColor" name="controlBackgroundColor" catalog="System" colorSpace="catalog"/>
                                         </state>
+                                        <userDefinedRuntimeAttributes>
+                                            <userDefinedRuntimeAttribute type="boolean" keyPath="shadow" value="YES"/>
+                                            <userDefinedRuntimeAttribute type="boolean" keyPath="border" value="NO"/>
+                                        </userDefinedRuntimeAttributes>
                                         <connections>
                                             <action selector="signUpEmailTapped:" destination="UkL-Ze-RCU" eventType="touchUpInside" id="Orx-FJ-blx"/>
                                         </connections>
@@ -122,6 +127,9 @@ Accepted currency: ether</string>
     <resources>
         <image name="Background" width="375" height="667"/>
         <image name="IPExchange" width="206" height="40"/>
+        <namedColor name="DarkBlue">
+            <color red="0.16899999979999999" green="0.51399999860000001" blue="0.65499997139999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
         <namedColor name="DarkBlue">
             <color red="0.16899999979999999" green="0.51399999860000001" blue="0.65499997139999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
