--- a/IPSX/Storyboard/Landing.storyboard
+++ b/IPSX/Storyboard/Landing.storyboard
@@ -54,6 +54,9 @@ Accepted currency: ether</string>
                                                 <color key="value" name="DarkBlue"/>
                                             </userDefinedRuntimeAttribute>
                                         </userDefinedRuntimeAttributes>
+                                        <connections>
+                                            <segue destination="0cM-qh-tFz" kind="show" id="buM-0W-gW9"/>
+                                        </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="m6V-ee-6pa">
                                         <rect key="frame" x="85" y="146" width="205" height="29"/>
@@ -123,13 +126,18 @@ Accepted currency: ether</string>
             </objects>
             <point key="canvasLocation" x="93.599999999999994" y="134.48275862068968"/>
         </scene>
+        <!--Main-->
+        <scene sceneID="N3o-qr-kfU">
+            <objects>
+                <viewControllerPlaceholder storyboardName="Main" id="0cM-qh-tFz" sceneMemberID="viewController"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="VBF-rC-9ob" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="652" y="196"/>
+        </scene>
     </scenes>
     <resources>
         <image name="Background" width="375" height="667"/>
         <image name="IPExchange" width="206" height="40"/>
-        <namedColor name="DarkBlue">
-            <color red="0.16899999979999999" green="0.51399999860000001" blue="0.65499997139999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </namedColor>
         <namedColor name="DarkBlue">
             <color red="0.16899999979999999" green="0.51399999860000001" blue="0.65499997139999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
