--- a/IPSX/Storyboard/Landing.storyboard
+++ b/IPSX/Storyboard/Landing.storyboard
@@ -81,6 +81,7 @@ Accepted currency: ether</string>
                                         </userDefinedRuntimeAttributes>
                                         <connections>
                                             <action selector="signUpEmailTapped:" destination="UkL-Ze-RCU" eventType="touchUpInside" id="Orx-FJ-blx"/>
+                                            <segue destination="4bR-u2-yCH" kind="show" id="mhL-iD-cRf"/>
                                         </connections>
                                     </button>
                                 </subviews>
@@ -123,13 +124,18 @@ Accepted currency: ether</string>
             </objects>
             <point key="canvasLocation" x="93.599999999999994" y="134.48275862068968"/>
         </scene>
+        <!--Register-->
+        <scene sceneID="6LT-lz-wRc">
+            <objects>
+                <viewControllerPlaceholder storyboardName="Register" id="4bR-u2-yCH" sceneMemberID="viewController"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Qh6-9a-WtT" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="718" y="134"/>
+        </scene>
     </scenes>
     <resources>
         <image name="Background" width="375" height="667"/>
         <image name="IPExchange" width="206" height="40"/>
-        <namedColor name="DarkBlue">
-            <color red="0.16899999979999999" green="0.51399999860000001" blue="0.65499997139999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </namedColor>
         <namedColor name="DarkBlue">
             <color red="0.16899999979999999" green="0.51399999860000001" blue="0.65499997139999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
