--- a/IPSX/Storyboard/Landing.storyboard
+++ b/IPSX/Storyboard/Landing.storyboard
@@ -4,7 +4,6 @@
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
-        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
@@ -38,15 +37,16 @@ Accepted currency: ether</string>
                                 <nil key="highlightedColor"/>
                             </label>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="MRN-Ud-kuM" userLabel="BottomView">
-                                <rect key="frame" x="0.0" y="442" width="375" height="225"/>
+                                <rect key="frame" x="0.0" y="504" width="375" height="163"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ugu-Hv-Kee" customClass="RoundedButton" customModule="IPSX" customModuleProvider="target">
-                                        <rect key="frame" x="45" y="54" width="285" height="44"/>
+                                        <rect key="frame" x="45.5" y="54" width="284" height="44"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="44" id="aEZ-8f-FkF"/>
+                                            <constraint firstAttribute="width" constant="284" id="oX5-Nh-08q"/>
                                         </constraints>
                                         <color key="tintColor" name="DarkBlue"/>
-                                        <state key="normal" title="Button"/>
+                                        <state key="normal" title="Login"/>
                                         <userDefinedRuntimeAttributes>
                                             <userDefinedRuntimeAttribute type="boolean" keyPath="border" value="YES"/>
                                             <userDefinedRuntimeAttribute type="boolean" keyPath="shadow" value="NO"/>
@@ -54,25 +54,17 @@ Accepted currency: ether</string>
                                                 <color key="value" name="DarkBlue"/>
                                             </userDefinedRuntimeAttribute>
                                         </userDefinedRuntimeAttributes>
-                                    </button>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="m6V-ee-6pa">
-                                        <rect key="frame" x="85" y="146" width="205" height="29"/>
-                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                        <state key="normal" title="Already have an account? Login">
-                                            <color key="titleColor" name="DarkBlue"/>
-                                        </state>
                                         <connections>
-                                            <action selector="loginTapped:" destination="UkL-Ze-RCU" eventType="touchUpInside" id="but-pA-zVN"/>
+                                            <segue destination="uCg-Ke-ahv" kind="show" id="WWb-sk-1Il"/>
                                         </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kCB-he-W31" customClass="RoundedButton" customModule="IPSX" customModuleProvider="target">
-                                        <rect key="frame" x="45" y="0.0" width="285" height="44"/>
+                                        <rect key="frame" x="45.5" y="0.0" width="284" height="44"/>
                                         <color key="backgroundColor" name="LightBlue"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="44" id="5eI-Ud-TWR"/>
                                         </constraints>
-                                        <state key="normal" title="Sign Up with Email">
+                                        <state key="normal" title="Register">
                                             <color key="titleColor" name="controlBackgroundColor" catalog="System" colorSpace="catalog"/>
                                         </state>
                                         <userDefinedRuntimeAttributes>
@@ -87,14 +79,10 @@ Accepted currency: ether</string>
                                 </subviews>
                                 <constraints>
                                     <constraint firstItem="kCB-he-W31" firstAttribute="trailing" secondItem="ugu-Hv-Kee" secondAttribute="trailing" id="4ld-6O-Wo7"/>
-                                    <constraint firstItem="m6V-ee-6pa" firstAttribute="centerX" secondItem="MRN-Ud-kuM" secondAttribute="centerX" id="5if-cK-NnS"/>
                                     <constraint firstItem="kCB-he-W31" firstAttribute="leading" secondItem="ugu-Hv-Kee" secondAttribute="leading" id="89B-iF-QvM"/>
-                                    <constraint firstItem="ugu-Hv-Kee" firstAttribute="leading" secondItem="MRN-Ud-kuM" secondAttribute="leading" constant="45" id="RUS-fN-aav"/>
+                                    <constraint firstAttribute="bottom" secondItem="ugu-Hv-Kee" secondAttribute="bottom" constant="65" id="MNm-yY-Rfx"/>
                                     <constraint firstItem="ugu-Hv-Kee" firstAttribute="centerX" secondItem="MRN-Ud-kuM" secondAttribute="centerX" id="ahN-Gd-OY7"/>
                                     <constraint firstItem="kCB-he-W31" firstAttribute="top" secondItem="MRN-Ud-kuM" secondAttribute="top" id="bF8-Yc-88R"/>
-                                    <constraint firstAttribute="trailing" secondItem="ugu-Hv-Kee" secondAttribute="trailing" constant="45" id="dR2-xQ-oqi"/>
-                                    <constraint firstItem="m6V-ee-6pa" firstAttribute="top" secondItem="ugu-Hv-Kee" secondAttribute="bottom" constant="48" id="fyC-vT-9vA"/>
-                                    <constraint firstAttribute="bottom" secondItem="m6V-ee-6pa" secondAttribute="bottom" constant="50" id="j6g-4Y-f7n"/>
                                     <constraint firstItem="ugu-Hv-Kee" firstAttribute="top" secondItem="kCB-he-W31" secondAttribute="bottom" constant="10" id="m4U-mV-tJO"/>
                                 </constraints>
                             </view>
@@ -130,7 +118,15 @@ Accepted currency: ether</string>
                 <viewControllerPlaceholder storyboardName="Register" id="4bR-u2-yCH" sceneMemberID="viewController"/>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Qh6-9a-WtT" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="718" y="134"/>
+            <point key="canvasLocation" x="721" y="65"/>
+        </scene>
+        <!--Login-->
+        <scene sceneID="eCU-yl-eJ1">
+            <objects>
+                <viewControllerPlaceholder storyboardName="Login" id="uCg-Ke-ahv" sceneMemberID="viewController"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="z1P-5s-L8t" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="707" y="213"/>
         </scene>
     </scenes>
     <resources>
