Add support for QR scan and paste for add eth address screen

--- a/IPSX/Storyboard/Login.storyboard
+++ b/IPSX/Storyboard/Login.storyboard
@@ -321,6 +321,9 @@
                                 <state key="disabled">
                                     <color key="titleColor" name="Silver"/>
                                 </state>
+                                <connections>
+                                    <segue destination="WaM-93-tC1" kind="show" id="YN8-lG-qlM"/>
+                                </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -519,7 +522,15 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="sRN-0L-50g" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <exit id="iJa-Yr-c0U" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
-            <point key="canvasLocation" x="4196" y="132"/>
+            <point key="canvasLocation" x="4329" y="-5"/>
+        </scene>
+        <!--WalletAdd-->
+        <scene sceneID="5pZ-Aa-VzF">
+            <objects>
+                <viewControllerPlaceholder storyboardName="WalletAdd" id="WaM-93-tC1" sceneMemberID="viewController"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="wsU-ND-ZvQ" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="4104" y="399"/>
         </scene>
     </scenes>
     <resources>
