--- a/IPSX/Storyboard/Main.storyboard
+++ b/IPSX/Storyboard/Main.storyboard
@@ -15,7 +15,7 @@
             <objects>
                 <viewController title="New Proxy" id="6jc-WL-DqT" customClass="NewProxyController" customModule="IPSX" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="T69-ub-Uaa">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="618"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="99" estimatedRowHeight="-1" sectionHeaderHeight="38" sectionFooterHeight="18" translatesAutoresizingMaskIntoConstraints="NO" id="s7w-JR-Nif">
@@ -143,7 +143,7 @@
             <objects>
                 <viewController title="Dashboard" id="4A6-HS-yFF" customClass="DashboardViewController" customModule="IPSX" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="9TO-nV-47n">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="618"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="5Xw-8d-dgg" userLabel="SlidableHolder">
@@ -348,11 +348,12 @@
         <scene sceneID="C2l-Kq-4bT">
             <objects>
                 <tabBarController id="zhc-5m-q3f" customClass="TabBarViewController" customModule="IPSX" customModuleProvider="target" sceneMemberID="viewController">
-                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="smb-Vh-uSz">
+                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" translucent="NO" id="smb-Vh-uSz">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="49"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <color key="tintColor" red="0.16470588235294117" green="0.67500001192092896" blue="0.87800002098083496" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="barTintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <color key="selectedImageTintColor" red="0.16470588235294117" green="0.67450980392156867" blue="0.87800002098083496" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </tabBar>
                     <connections>
@@ -371,7 +372,7 @@
             <objects>
                 <viewController title="Settings" id="f0C-Rr-AGY" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="yhC-aQ-dN8">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="618"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="fcR-bh-uWF" userLabel="Top Bar">
@@ -431,24 +432,94 @@
             <objects>
                 <viewController title="Profile" id="Eii-NL-efe" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="LKY-4o-U3S">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="618"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="BackgroundProfile" translatesAutoresizingMaskIntoConstraints="NO" id="JQJ-K1-EAa">
+                                <rect key="frame" x="0.0" y="-30" width="375" height="265"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="265" id="ckl-n0-x4T"/>
+                                </constraints>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2I9-OY-dqk">
+                                <rect key="frame" x="305" y="20" width="61" height="33"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <state key="normal" title="Log Out">
+                                    <color key="titleColor" red="0.16862745100000001" green="0.51372549020000002" blue="0.65499997139999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                </state>
+                                <connections>
+                                    <segue destination="grr-34-nBj" kind="show" id="GJW-Nk-HKh"/>
+                                </connections>
+                            </button>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="jonAlways" translatesAutoresizingMaskIntoConstraints="NO" id="vbE-wm-rj6">
+                                <rect key="frame" x="140" y="55" width="94" height="94"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="94" id="Qyd-yt-WKG"/>
+                                    <constraint firstAttribute="height" constant="94" id="z3Y-NW-pGK"/>
+                                </constraints>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Vitalik Butterin" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="P1s-ED-Rvm">
+                                <rect key="frame" x="114" y="163" width="147" height="27"/>
+                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="22"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Basic User" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HwG-7N-7Tm">
+                                <rect key="frame" x="150" y="198" width="74" height="18"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                <color key="textColor" red="0.53333333333333333" green="0.53333333333333333" blue="0.53333333333333333" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Me8-W1-OLa" userLabel="Separator">
+                                <rect key="frame" x="0.0" y="235" width="375" height="0.5"/>
+                                <color key="backgroundColor" red="0.67450980392156867" green="0.67450980392156867" blue="0.67450980392156867" alpha="0.30325704225352113" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="0.5" id="aPD-Ok-6HH"/>
+                                </constraints>
+                            </view>
+                        </subviews>
+                        <color key="backgroundColor" red="0.97254901960784312" green="0.97254901960784312" blue="0.97254901960784312" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="P1s-ED-Rvm" firstAttribute="top" secondItem="vbE-wm-rj6" secondAttribute="bottom" constant="14" id="4t9-kQ-Emb"/>
+                            <constraint firstItem="HwR-iC-eo1" firstAttribute="trailing" secondItem="JQJ-K1-EAa" secondAttribute="trailing" id="IeO-aF-XvS"/>
+                            <constraint firstItem="Me8-W1-OLa" firstAttribute="leading" secondItem="HwR-iC-eo1" secondAttribute="leading" id="MTj-dY-k5y"/>
+                            <constraint firstItem="vbE-wm-rj6" firstAttribute="centerY" secondItem="JQJ-K1-EAa" secondAttribute="centerY" id="RUr-kJ-siG"/>
+                            <constraint firstItem="HwR-iC-eo1" firstAttribute="trailing" secondItem="2I9-OY-dqk" secondAttribute="trailing" constant="9" id="RtG-qd-PNe"/>
+                            <constraint firstItem="HwG-7N-7Tm" firstAttribute="top" secondItem="P1s-ED-Rvm" secondAttribute="bottom" constant="8" id="VW3-bd-kLT"/>
+                            <constraint firstItem="HwR-iC-eo1" firstAttribute="top" secondItem="JQJ-K1-EAa" secondAttribute="top" constant="50" id="Vbj-Aj-1Ko"/>
+                            <constraint firstItem="P1s-ED-Rvm" firstAttribute="centerX" secondItem="vbE-wm-rj6" secondAttribute="centerX" id="bCm-xu-vgM"/>
+                            <constraint firstItem="HwR-iC-eo1" firstAttribute="trailing" secondItem="Me8-W1-OLa" secondAttribute="trailing" id="bIl-Wf-uQt"/>
+                            <constraint firstItem="2I9-OY-dqk" firstAttribute="top" secondItem="HwR-iC-eo1" secondAttribute="top" id="dVl-1d-DDA"/>
+                            <constraint firstItem="vbE-wm-rj6" firstAttribute="centerX" secondItem="JQJ-K1-EAa" secondAttribute="centerX" id="dYI-Mj-khR"/>
+                            <constraint firstItem="JQJ-K1-EAa" firstAttribute="leading" secondItem="HwR-iC-eo1" secondAttribute="leading" id="l6W-p4-Sco"/>
+                            <constraint firstItem="HwG-7N-7Tm" firstAttribute="centerX" secondItem="P1s-ED-Rvm" secondAttribute="centerX" id="mS3-gs-nMY"/>
+                            <constraint firstItem="Me8-W1-OLa" firstAttribute="top" secondItem="JQJ-K1-EAa" secondAttribute="bottom" id="sKV-B5-5qh"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="HwR-iC-eo1"/>
                     </view>
                     <tabBarItem key="tabBarItem" title="Profile" image="Profile" id="Zvj-xy-99V"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="LV9-Pm-siq" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1098" y="815"/>
+            <point key="canvasLocation" x="1096.8" y="814.54272863568224"/>
+        </scene>
+        <!--Landing-->
+        <scene sceneID="MA1-Jg-3H6">
+            <objects>
+                <viewControllerPlaceholder storyboardName="Landing" id="grr-34-nBj" sceneMemberID="viewController"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="MpH-XF-AqQ" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1678" y="814"/>
         </scene>
     </scenes>
     <resources>
+        <image name="BackgroundProfile" width="375" height="235"/>
         <image name="Dashboard" width="24" height="28"/>
         <image name="IPSXRightLogo" width="21" height="21"/>
         <image name="NewProxy" width="28" height="28"/>
         <image name="PackCoins" width="37" height="33"/>
         <image name="Profile" width="28" height="28"/>
         <image name="Settings" width="28" height="28"/>
+        <image name="jonAlways" width="94" height="94"/>
     </resources>
 </document>
