--- a/IPSX/Storyboard/WalletAdd.storyboard
+++ b/IPSX/Storyboard/WalletAdd.storyboard
@@ -264,7 +264,7 @@
                                             <color key="titleColor" red="0.16899999979999999" green="0.51372549020000002" blue="0.65499997139999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         </state>
                                         <connections>
-                                            <segue destination="3V7-ST-knj" kind="unwind" unwindAction="unwindToMainWithSegue:" id="6N6-vI-VFi"/>
+                                            <segue destination="3V7-ST-knj" kind="unwind" unwindAction="unwindToTabbarWithSegue:" id="Kz2-14-T0R"/>
                                         </connections>
                                     </button>
                                 </subviews>
@@ -277,7 +277,7 @@
                                 </constraints>
                             </view>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="You're officially member of our community." textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yU7-rU-aRV">
-                                <rect key="frame" x="26" y="378" width="323" height="20"/>
+                                <rect key="frame" x="26" y="378" width="323" height="19.5"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                 <color key="textColor" red="0.0" green="0.1647058824" blue="0.1650000066" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
