New proxy UI logic & constraints implementation

--- a/IPSX/Storyboard/Main.storyboard
+++ b/IPSX/Storyboard/Main.storyboard
@@ -29,51 +29,68 @@
                                             <rect key="frame" x="0.0" y="0.0" width="345" height="99"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="lfs-8S-10I" customClass="RoundedView" customModule="IPSX" customModuleProvider="target">
-                                                    <rect key="frame" x="0.0" y="0.0" width="345" height="88"/>
-                                                    <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="lfs-8S-10I" customClass="RoundedView" customModule="IPSX" customModuleProvider="target">
+                                                    <rect key="frame" x="0.0" y="0.0" width="345" height="89"/>
                                                     <subviews>
-                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="50 IPSX" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8fJ-fX-9XP">
-                                                            <rect key="frame" x="264" y="34" width="61" height="20"/>
-                                                            <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="50 IPSX" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8fJ-fX-9XP">
+                                                            <rect key="frame" x="269" y="35" width="61" height="20"/>
                                                             <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="16"/>
                                                             <color key="textColor" red="0.1647058824" green="0.67450980390000004" blue="0.87800002099999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
-                                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="PackCoins" translatesAutoresizingMaskIntoConstraints="NO" id="RZR-lf-D00">
-                                                            <rect key="frame" x="18" y="28" width="37" height="33"/>
-                                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
+                                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="PackCoins" translatesAutoresizingMaskIntoConstraints="NO" id="RZR-lf-D00">
+                                                            <rect key="frame" x="15" y="28" width="37" height="33"/>
                                                         </imageView>
-                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Silver Pack" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uq0-3n-dFX">
-                                                            <rect key="frame" x="71" y="18" width="84" height="20"/>
-                                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Silver Pack" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uq0-3n-dFX">
+                                                            <rect key="frame" x="67" y="20" width="84" height="20"/>
                                                             <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="16"/>
                                                             <color key="textColor" red="0.1647058824" green="0.1647058824" blue="0.1647058824" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
-                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="100 MB" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5D6-ZX-t6t">
-                                                            <rect key="frame" x="71" y="38" width="46" height="16"/>
-                                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="100 MB" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5D6-ZX-t6t">
+                                                            <rect key="frame" x="67" y="40" width="46" height="16"/>
                                                             <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                                             <color key="textColor" red="0.59999999999999998" green="0.59999999999999998" blue="0.59999999999999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
-                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="60 min" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XrZ-UV-4SA">
-                                                            <rect key="frame" x="71" y="55" width="42" height="16"/>
-                                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="60 min" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XrZ-UV-4SA">
+                                                            <rect key="frame" x="67" y="56" width="42" height="16"/>
                                                             <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                                             <color key="textColor" red="0.59999999999999998" green="0.59999999999999998" blue="0.59999999999999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
                                                     </subviews>
                                                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                    <constraints>
+                                                        <constraint firstItem="RZR-lf-D00" firstAttribute="centerY" secondItem="lfs-8S-10I" secondAttribute="centerY" id="K6F-Sg-Vxe"/>
+                                                        <constraint firstItem="XrZ-UV-4SA" firstAttribute="top" secondItem="5D6-ZX-t6t" secondAttribute="bottom" id="L8N-5K-mha"/>
+                                                        <constraint firstItem="RZR-lf-D00" firstAttribute="leading" secondItem="lfs-8S-10I" secondAttribute="leading" constant="15" id="OIl-Dw-vl5"/>
+                                                        <constraint firstItem="uq0-3n-dFX" firstAttribute="leading" secondItem="RZR-lf-D00" secondAttribute="trailing" constant="15" id="Ray-aj-NlI"/>
+                                                        <constraint firstItem="5D6-ZX-t6t" firstAttribute="top" secondItem="uq0-3n-dFX" secondAttribute="bottom" id="V2e-cV-FKq"/>
+                                                        <constraint firstItem="XrZ-UV-4SA" firstAttribute="leading" secondItem="uq0-3n-dFX" secondAttribute="leading" id="ZOQ-38-zyd"/>
+                                                        <constraint firstAttribute="trailing" secondItem="8fJ-fX-9XP" secondAttribute="trailing" constant="15" id="b6Q-LA-jb6"/>
+                                                        <constraint firstItem="8fJ-fX-9XP" firstAttribute="centerY" secondItem="lfs-8S-10I" secondAttribute="centerY" id="cU4-Wb-CqA"/>
+                                                        <constraint firstItem="5D6-ZX-t6t" firstAttribute="leading" secondItem="uq0-3n-dFX" secondAttribute="leading" id="kc4-3p-dRu"/>
+                                                        <constraint firstItem="uq0-3n-dFX" firstAttribute="top" secondItem="lfs-8S-10I" secondAttribute="top" constant="20" id="wSS-Mp-lWn"/>
+                                                    </constraints>
                                                 </view>
                                             </subviews>
                                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                            <constraints>
+                                                <constraint firstAttribute="bottom" secondItem="lfs-8S-10I" secondAttribute="bottom" constant="10" id="B2U-MY-JgU"/>
+                                                <constraint firstItem="lfs-8S-10I" firstAttribute="top" secondItem="H0s-u9-PN0" secondAttribute="top" id="NhE-Ca-hl1"/>
+                                                <constraint firstAttribute="trailing" secondItem="lfs-8S-10I" secondAttribute="trailing" id="Pip-CH-HFT"/>
+                                                <constraint firstItem="lfs-8S-10I" firstAttribute="leading" secondItem="H0s-u9-PN0" secondAttribute="leading" id="Uhf-du-a4G"/>
+                                            </constraints>
                                         </tableViewCellContentView>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <connections>
                                             <outlet property="cellContentView" destination="lfs-8S-10I" id="J2E-mn-L7k"/>
+                                            <outlet property="durationLabel" destination="XrZ-UV-4SA" id="5Ih-Y6-MML"/>
+                                            <outlet property="nameLabel" destination="uq0-3n-dFX" id="fnq-Je-Ab7"/>
+                                            <outlet property="noOfMBLabel" destination="5D6-ZX-t6t" id="7JB-VJ-rkW"/>
+                                            <outlet property="packImageView" destination="RZR-lf-D00" id="csU-XG-Juu"/>
+                                            <outlet property="priceLabel" destination="8fJ-fX-9XP" id="JLI-cI-yEX"/>
                                         </connections>
                                     </tableViewCell>
                                 </prototypes>
