--- a/IPSX/New Proxy/Storyboard/NewProxy.storyboard
+++ b/IPSX/New Proxy/Storyboard/NewProxy.storyboard
@@ -10,10 +10,10 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Proxy Details View Controller-->
+        <!--Proxy Summary View Controller-->
         <scene sceneID="scf-RJ-bCB">
             <objects>
-                <viewController id="LP8-BI-u9L" customClass="ProxyDetailsViewController" customModule="IPSX" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="LP8-BI-u9L" customClass="ProxySummaryViewController" customModule="IPSX" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="geY-Hc-NhF">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
